--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
     list-style: none;
     text-decoration: none;
     color: #ffff;
-    font-size: 10px;
+    font-size: 13px;
 }
 
 #main-container,
@@ -67,7 +67,7 @@ body {
     list-style: none;
     text-decoration: none;
     color: #636262;
-    font-size: 10px;
+    font-size: 13px;
 
 }
 
@@ -117,7 +117,7 @@ body {
     align-items: center;
     margin: 0 auto;
     padding: 0.8rem;
-    font-size: 10px;
+    font-size: 12px;
     background: rgba(119, 119, 119, 0.144);
 }
 
@@ -126,6 +126,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin: 0 auto;
     padding: 1rem;
     gap: 3rem;
@@ -134,15 +135,19 @@ body {
 
 #main img {
     width: 60%;
+    margin: auto 0;
+    
 }
 
 #main #p1 {
     font-size: 20px;
     font-weight: 600;
+    max-width: 600px;
 }
 
 #main h1 {
     font-size: 4rem;
+    max-width: 600px;
 }
 
 
@@ -153,8 +158,26 @@ body {
 }
 
 #main #p3 {
+
     font-size: 18px;
+    max-width: 600px;
     color: #636262;
+}
+
+#main a {
+    text-decoration: none;
+} 
+#btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(32, 108, 170);
+    padding: 7px;
+    border-radius: 10px;
+    width: 100px;
+
+    color: #ffff;    
 }
 
 
@@ -209,3 +232,4 @@ body {
   .selected {
     outline: 2px solid #43a1ff;
   }
+
